# atlys-web-scrapper

./: .env.example  .gitignore  README.md  export_product.csv  hello.py  main.py  pyproject.toml
models/: product.py
service/: api.py  cache.py  notifier.py  scrapper.py
