[project]
name = "atlys-web-scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.5",
    "html5lib>=1.1",
    "loguru>=0.7.2",
    "redis>=5.2.0",
    "requests>=2.32.3",
    "uvicorn>=0.32.1",
]
